TLCPM-168 - color, contrast, size fixes

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -40,6 +40,19 @@ small, h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h
 .muted {
 	
 }
+.btn-primary[disabled] {
+	background:#000;
+}
+
+.resDestPanel {
+	padding-left:30px;
+}
+.resDestPanel small label, .resDestPanel small a, .resDestPanel small span  {
+	font-size: 13px;
+}
+.bigSmall {
+	font-size: 13px;
+}
 .boxIFrame {
 	width:100%;
 	height:450px;
@@ -67,12 +80,6 @@ small, h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h
     height: 20px;
     width: 20px;	
 }
-.projectRow {
-	background:#f5f5f5;
-}
-.toolRow {
-	background:#fff;
-}
 label {
 	font-weight:normal;
 }
@@ -84,7 +91,10 @@ label {
 	top: 50px;
 	width:20px;
 }
-
+h3.panel-title small {
+	font-size: 13px;
+	padding-left:20px;
+} 
 @media (max-width: 480px) {
 	.panel-heading {
 		background-color: #777 !important;
@@ -135,6 +145,7 @@ label {
 	text-align:left;
 	padding-bottom:10px;
 }
+
 
 #statusModal .modal-dialog {
 	width:auto
